SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Bug fixes:

#1365 Column order mixed up after "show row numbers" and "make editable" or "rerun"

#1364 Connections tab shows no data on PostgreSQL 9.2+
Thanks to Krzysztof Szymko for the fix


3.9.0 (11/04/2018)
==================

Enhancements:

Introduced Java 11 compatibility.

#570 Cancel option for 'New file', 'Close file' and 'Open file'

Upgraded to latest RSyntax version (2.6.1).

Alias Tree: Sorting now works the same way as column sorting (ascending, descending, former state).

Alias Tree: Improved drag and drop behavior. Sorting now works the same way as column sorting (ascending, descending, former state).

SQL comments are now maintained in SQL history as well as SQL result header and info tab.

SQL Editor: Grouped right mouse entries concerning quotes, see comment in bug #1349.

#567 SQL History dropdown is now sorted youngest to oldest instead of oldest to youngest.

#323 DBCopy-Plugin: The 'Paste table as ...' feature was turned into 'Paste table as/filtered ...' and now allows
  to provide an optional WHERE clause.

Find Alias dialog (ctrl alt shift F) now has a check box to remember the last search string.

Improved layout of upper part of result tab.

New right mouse menu on result tables: 'Copy separated by ...' which opens a small
  configuration dialog to enter cell and row separators and then copies values to clipboard.

Version check message was improved. It was misleading as mentioned in feature request #568.

When a Session tab is renamed the rename dialog's text box now contains the old name.
  Thanks to Chris B for the code.

New toolbar button on the upper right of an SQL result tab: 'Mark duplicate values in columns'
  The mark's brightness alters between succeeding non unique values.
