@@ -1,0 +1,8 @@
+package net.sourceforge.squirrel_sql.client.gui.session;
+
+import net.sourceforge.squirrel_sql.client.session.mainpanel.IMainPanelTab;
+
+public interface MainPanelTabSelectionListener
+{
+   void mainTabSelected(IMainPanelTab newSelectedMainPanelTab);
+}
