@@ -4,6 +4,11 @@ SQuirreL SQL Client Change Log
 Not yet released, available in our GIT repository and in snapshots and future releases.
 ===============================================================================================
 
+Enhancements:
+
+#331 Add "New SQL tab" --> The "New SQL Worksheet" tool bar button can now be
+  changed into a "New SQL Tab" button which opens a new SQL tab inside the main Session window.
+
 Bug fixes:
 
 #1365 Column order mixed up after "show row numbers" and "make editable" or "rerun"
